style.css: Fix spacing between <pre> blocks, .toc blocks.

--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ h4, h5, h6 {
 .toc {
 	background: whitesmoke;
 	border: 1px solid darkgray;
-	margin: 0.5em;
+	margin: 1em 0.5em;
 	padding: 0.25em;
 }
 .toc h2 {
@@ -24,7 +24,7 @@ h4, h5, h6 {
 pre {
 	font: 1em monospace;
 	border: 1px solid gray;
-	margin: 0.25em;
+	margin: 1em 0.25em;
 	padding: 0.25em;
 	overflow: auto;
 }
